* db conversion underway, 3->4 completed now, reworked table docTree so that parent is now an int reffing back to the 
    recs id instead of the recs uuid, also added 'bump' field
* 4->5 completed, moved the 'name' out of table:docTree and into table:doc, and updated all code to match.  (this change
    was purely serverside)
2025-05-26 ------------------------------------------------------------------------------------------------------------
* various cleanups,  renamed a .doc, got rid of some stale files,  fixed a .gitignore, etc...
* fixed some old license references to Apache  --> AGPLv3
* turned what was FG.DCH_BASE into a real importable class in the new html/modules/classes directory
* beefed up the new JLPAINT plugin slightly, and completed the 'HOWTO create a plugin.odt' document

2025-05-25 ------------------------------------------------------------------------------------------------------------
* finished the DocFileFormat 1.1.odt documentation
* wrote and added a DFListenerTracker class and added it to DCH_BASE so all plugins can use it as a clean way to add
    and remove listeners, which will automatically be removed when the plugin is .destroy()'ed.
* removed addTrackedListener(), removeTrackedListenerById() and removeAllTrackedListeners() from fem_core_Functions.js
* minor cleanups

 2025-05-24 ------------------------------------------------------------------------------------------------------------
* DCH_BASE .loadCss is now .loadStyle(str) and it now supports a str of "<style>...</style>" or a URL path to a .css file
* DFDialog has also been significantly tweaked to allow styles to be applied in a similar manner as DCH_BASE now does
* DFContextMenu and DFMenuBar now accept the cssList as part of the class constructor, but otherwise operates the 
    same as DFDialog does now.
* further reworking of DFDialog, changed the params to open() to always be a dict.  Just adds much more flexibility!